force-app/main/default/objects/RFP_Process__c/RFP_Process__c.object-meta.xml
<CustomObject>
    <description>This object is used to track the RFP Process for SALT opportunities.</description>
    <label>RFP Process</label>
    <nameField>
        <label>RFP Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFP Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>