force-app/main/default/objects/RFP_Process__c/fields/RAE_for_Account__c.field-meta.xml
<CustomField>
    <fullName>RAE_for_Account__c</fullName>
    <formula>(RFP_Account__r.Regional_Account_Executive__r.FirstName)+ &quot; &quot; + (RFP_Account__r.Regional_Account_Executive__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAE for Account</label>
    <type>Text</type>
</CustomField>