force-app/main/default/objects/RFP_Process__c/fields/RFP_2nd_Round__c.field-meta.xml
<CustomField>
    <fullName>RFP_2nd_Round__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box becomes ticked once a Request for Proposal has entered the second round.</description>
    <inlineHelpText>This box becomes ticked once a Request for Proposal has entered the second round.</inlineHelpText>
    <label>RFP 2nd Round</label>
    <type>Checkbox</type>
</CustomField>