force-app/main/default/objects/RFP_Process__c/fields/RFP_Account__c.field-meta.xml
<CustomField>
    <fullName>RFP_Account__c</fullName>
    <inlineHelpText>This is the Account for which the RFP is being processed.</inlineHelpText>
    <label>RFP Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFP Processes</relationshipLabel>
    <relationshipName>RFP_Processes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>