force-app/main/default/objects/RFP_Process__c/fields/RFP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Due_Date__c</fullName>
    <label>RFP Due Date</label>
    <type>Date</type>
</CustomField>