force-app/main/default/objects/RFP_Process__c/fields/RFP_Lead__c.field-meta.xml
<CustomField>
    <fullName>RFP_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFP Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFP_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>