force-app/main/default/objects/RFP_Process__c/fields/RFP_Loss_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>RFP_Loss_Reason_s__c</fullName>
    <label>RFP Loss Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Legal Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>