force-app/main/default/objects/RFP_Process__c/fields/RFP_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Received_Date__c</fullName>
    <label>RFP Received Date</label>
    <type>Date</type>
</CustomField>