force-app/main/default/objects/RFP_Process__c/fields/RFP_Source__c.field-meta.xml
<CustomField>
    <fullName>RFP_Source__c</fullName>
    <label>RFP Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
            <value>
                <fullName>RFP.com</fullName>
            </value>
            <value>
                <fullName>Client Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>