force-app/main/default/objects/RFP_Process__c/fields/RFP_Status__c.field-meta.xml
<CustomField>
    <fullName>RFP_Status__c</fullName>
    <label>RFP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Receipt of the Request for RFP</fullName>
            </value>
            <value>
                <fullName>Approval to Respond to RFP</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Response to RFP Sent</fullName>
            </value>
            <value>
                <fullName>Invited to Participate in 2nd Round</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>