force-app/main/default/objects/RFP_Process__c/fields/RFP_Type__c.field-meta.xml
<CustomField>
    <fullName>RFP_Type__c</fullName>
    <label>RFP Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Proactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>