force-app/main/default/objects/RFP_Process__c/fields/RFP_Value__c.field-meta.xml
<CustomField>
    <fullName>RFP_Value__c</fullName>
    <description>Estimated value of proposal.</description>
    <label>RFP Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>