force-app/main/default/objects/RFP_Process__c/fields/RFP_Win_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>RFP_Win_Reason_s__c</fullName>
    <inlineHelpText>This field indicates the reason(s) by which the RFP was won.</inlineHelpText>
    <label>RFP Win Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>RAE Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>