force-app/main/default/objects/RFP_Process__c/fields/RFP_Winner__c.field-meta.xml
<CustomField>
    <fullName>RFP_Winner__c</fullName>
    <inlineHelpText>Provide the name of the institution that won the RFP.</inlineHelpText>
    <label>RFP Winner</label>
    <type>TextArea</type>
</CustomField>