force-app/main/default/objects/RFP_Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RFP_Type__c</columns>
    <columns>RAE_for_Account__c</columns>
    <columns>NAME</columns>
    <columns>RFP_Lead__c</columns>
    <columns>RFP_Status__c</columns>
    <columns>RFP_Received_Date__c</columns>
    <columns>RFP_Due_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RFP_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>